--- a/src/Dorothy/Views/Photos/Index.cshtml
+++ b/src/Dorothy/Views/Photos/Index.cshtml
@@ -1,18 +1,22 @@
 ﻿@model Dorothy.ViewModels.Photos.IndexViewModel
 
-<h2>Fotos und Videos</h2>
 
 <div class="row">
-    <div class="col-md-10">
-        <div class="alert alert-info">
+    <div class="col-md-6">
+        <h2>Fotos und Videos</h2>
+
+        <p>
             Hier möchten wir alle Fotos und Videos sammeln, die du und die anderen Gäste während unserer Hochzeit machen. Smartphones sei Dank geht das ja so einfach wie noch nie.
-            Alle Fotos werden dann an dieser Stelle allen Gästen zur Verfügung gestellt.<br /><br />
+            Alle Fotos werden dann an dieser Stelle allen Gästen zur Verfügung gestellt.
+        </p>
+        <p>
             Noch wissen wir nicht genau, wie wir das möglichst einfach und bequem für alle machen werden.
             Aber zum Glück ist es ja noch ewig bis zum großen Dank, bis dahin wird uns sicher etwas einfallen.
-        </div> 
-    </div>
-    <div class="col-md-2 text-center">
-        <span class="glyphicon glyphicon-camera huge"></span>
-    </div>    
-</div>
 
+        </p>
+    </div>
+
+    <div class="col-md-6 text-center">
+        <span class="glyphicon glyphicon-camera huge"></span>
+    </div>
+</div>
