--- a/src/Dorothy/Views/Guests/Delete.cshtml
+++ b/src/Dorothy/Views/Guests/Delete.cshtml
@@ -1,14 +1,19 @@
 ﻿@model Dorothy.ViewModels.Guests.DeleteViewModel
 
-<h2>Gast löschen</h2>
-<hr/>
+<div class="row">
+    <div class="col-xs-12">
+        <h2>Gast löschen</h2>
 
-<form class="form-horizontal" method="POST">
+        <form class="form-horizontal" method="POST">
 
-    <p>Ganz sicher und unwiderbringlich den Gast <b>@Model.Names</b> löschen?</p>
+            <p>
+                Ganz sicher und unwiderbringlich den Gast <b>@Model.Names</b> löschen?
+            </p>
 
-    <div class="form-group">
-        <a href="@Url.Action("Index")" class="btn btn-default">Nein, zurück</a>
-            <button type="submit" class="btn btn-danger">Ja, löschen</button>
+            <div class="form-group">
+                <a href="@Url.Action("Index")" class="btn btn-default">Nein, zurück</a>
+                <button type="submit" class="btn btn-danger">Ja, löschen</button>
+            </div>
+        </form>
     </div>
-</form>
+</div>
