--- a/src/Dorothy/Views/Home/Login.cshtml
+++ b/src/Dorothy/Views/Home/Login.cshtml
@@ -6,9 +6,10 @@
 
 <div class="row">
     <div class="col-md-6">
+        <img src="/img/names.png" />
+    </div>
 
-        <h2>Christina und Hannes heiraten</h2>
-
+    <div class="col-md-6">
         <p>
             Auf dieser Seite findest du alle wichtigen (und weniger wichtigen) Informationen zur Hochzeit gesammelt und aktuell gehalten.
         </p>
@@ -18,23 +19,21 @@
         </p>
 
         <p>
-          Als geladener Gast findest du das Passwort auf der Einladung. Solltest du Probleme haben, dann kontaktiere bitte Christina oder Hannes.
+            Als geladener Gast findest du das Passwort auf der Einladung. Solltest du Probleme haben, dann kontaktiere bitte Christina oder Hannes.
         </p>
+        <form method="POST">
+            @Html.ValidationSummary()
 
-    </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"><span class="glyphicon glyphicon-pencil"></span> Passwort</label>
+                <input asp-for="Password" type="password" class="form-control" placeholder="Hier bitte das Passwort eingeben ..." />
+            </div>
 
-    <div class="col-md-6">
-        <div class="well">
-            <form method="POST">
-                @Html.ValidationSummary()
+            <button type="submit" value="Weiter" class="btn btn-default">
 
-                <div class="form-group">
-                    <label for="Password" class="control-label"><span class="glyphicon glyphicon-pencil"></span> Passwort</label>
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Hier bitte das Passwort eingeben ..." } })
-                </div>
-
-                <input type="submit" value="Weiter" class="btn btn-success" />
-            </form>
-        </div>
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                Weiter
+            </button>
+        </form>
     </div>
 </div>
