--- a/src/Dorothy/Views/User/Route.cshtml
+++ b/src/Dorothy/Views/User/Route.cshtml
@@ -1,7 +1,7 @@
-﻿<h1>Anfahrt</h1>
-
-<div class="row">
+﻿<div class="row">
     <div class="col-md-6">
+        <h2>Anfahrt</h2>
+
         Wir feiern unsere Hochzeit im <b>Kulturstadl Reckender</b> in Mittertreffling,
         denn dort gibt es alles, was man für eine ordentliche Party braucht: Genug Platz und eine Bar.<br /><br />
         Kulturstadl Reckeneder<br />
