--- a/src/Dorothy/wwwroot/css/site.scss
+++ b/src/Dorothy/wwwroot/css/site.scss
@@ -1,8 +1,78 @@
-﻿body {
-    padding-top: 65px;
+﻿@import url(https://fonts.googleapis.com/css?family=Roboto:100);
+
+body {
     padding-bottom: 20px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    background: url("../img/background.png") white;
+    font-size: 16px;
+    color: black;
+    margin-top: 20px;
 }
+
+a, a:hover {
+    text-decoration: none;
+    color: black;
+
+    &:hover {
+        text-decoration: underline;
+        text-decoration-style: dotted;
+    }
+}
+
+a.btn:hover {
+    text-decoration: none;
+}
+
+
+h1, h2, h3 {
+    margin-top: 0;
+}
+
+
+button {
+    .glyphicon {
+        font-size: 90%;
+    }
+}
+
+
+.col-md-6 {
+    background-color: white;
+    padding: 20px;
+    background-clip: padding-box;
+    border: 20px solid transparent;
+    border-top: 0;
+
+    @media (min-width: 992px) {
+        border: 0;
+        border-bottom: 20px solid transparent;
+
+        &:nth-of-type(1) {
+            border-right: 10px solid transparent;
+        }
+
+        &:nth-of-type(2) {
+            border-left: 10px solid transparent;
+        }
+    }
+}
+
+
+.col-xs-12 {
+    background-color: white;
+    padding: 20px;
+    background-clip: padding-box;
+    border: 20px solid transparent;
+    border-top: 0;
+
+    @media (min-width: 992px) {
+        border: 0;
+        border-bottom: 20px solid transparent;
+    }
+}
+
+
 
 .field-validation-error, .validation-summary-errors {
     background-color: #f2dede;
@@ -49,95 +119,59 @@
     font-size: 9px;
 }
 
-body.login {
-    .well {
-        label, input, .btn {
-            font-size: 20px;
-            height: 40px;
-            padding: 0 12px;
-            display: block;
-            margin: 0;
-        }
 
-        label {
-            text-align: center;
-        }
+.navbar {
+    margin:  0 0 20px 0;
+    padding: 0 -15px;
 
-        .btn {
-            margin-left: auto;
-            margin-right: auto;
-        }
-    }
-}
-
-body.home {
-    .date-box {
-        font-size: 30px;
-        text-align: center;
-
-        a, a:hover {
-            color: #333;
-            text-decoration: none;
-        }
-    }
-}
-
-body.save-the-date {
-    background: url('../images/background.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-attachment: fixed;
-    font-size: 17px;
-    hyphens: manual;
-
-    a, a:hover {
-        color: #333;
+    a, a:hover, a:visited, a:active {
+        color: black;
     }
 
-    h1 {
-        text-align: center;
-        font-size: 45px;
-        font-weight: bold;
-    }
-
-    h2 {
-        text-align: center;
-        font-size: 35px;
-    }
-
-    h3 {
-        text-align: center;
-        font-size: 30px;
-
-        span {
-            font-size: 25px;
+    .container {
+        @media (min-width: 768px) {
+            padding: 0;
         }
     }
 
-    .well {
-        background-color: rgba(255, 255, 255, 0.75);
-    }
-}
+    .navbar-header {
+        background-color: white;
+        background-clip: padding-box;
+        border: 20px solid transparent;
+        border-top: 0;
+        border-bottom: 0;
 
-body.rsvp {
-    input#Name {
-        display: inline;
-        width: 180px;
+        @media (min-width: 992px) {
+            border: 0;
+        }
+
+        a.navbar-brand {
+            padding: 0 20px 0 20px;
+
+            img {
+                height: 50px;
+                padding: 5px 0;
+
+                @media (min-width: 768px) {
+                    padding: 5px 15px;
+                }
+            }
+        }
+
+        .navbar-toggle .icon-bar {
+            background-color: black;
+        }
     }
 
-    select#Type {
-        display: inline;
-        width: 180px;
-    }
+    .navbar-collapse {
+        background-color: white;
+        background-clip: padding-box;
+        border: 20px solid transparent;
+        border-top: 0;
+        border-bottom: 0;
 
-    input#AdultsCount, input#ChildCount {
-        display: inline;
-        width: 60px;
-    }
-
-    textarea {
-        height: 60px;
+        @media (min-width: 992px) {
+            border: 0;
+        }
     }
 }
